# Tic-Tac-Toe-Recognition

./: .gitignore  CMakeLists.txt  Cell.h  CellClassifier.cpp  CellClassifier.h  GameAutomate.cpp  GameAutomate.h  GameState.cpp  GameState.h  GeometricUtilities.cpp  GeometricUtilities.h  Grid.cpp  Grid.h  GridDrawer.cpp  GridDrawer.h  GridExtractor.cpp  GridExtractor.h  README.md  Source.cpp  TicTacToeActivity.cpp  TicTacToeActivity.h  TimingLogger.cpp  TimingLogger.h  main.cpp  motiondetection.cpp
